--- a/assets/tokens/color-text/index.yml
+++ b/assets/tokens/color-text/index.yml
@@ -9,26 +9,17 @@ imports:
 - ../aliases/color.yml
 
 props:
-  # text color on body
-  # =============================================
   text-color:
     value: "{!gray-dark}"
-
-  # link color
-  # =============================================
   link-color:
     value: "{!brand-primary}"
-
-  # link color hover
-  # =============================================
   link-hover-color:
     value: "#23527c"
-
   text-muted:
     value: "{!gray-light}"
-
   headings-small-color:
     value: "{!gray-light}"
-
   blockquote-small-color:
+    value: "{!gray-light}"
+  headings-color:
     value: "{!gray-light}"
