--- a/assets/tokens/font-size/index.yml
+++ b/assets/tokens/font-size/index.yml
@@ -1,40 +1,29 @@
 global:
-  type: color
-  category: text-color
+  category: font-size
+  type: font-size
   cssProperties:
-  - color
-  - fill
-
+  - font
+  - font-size
 imports:
-- ../aliases/color.yml
-
+- ../aliases/font-size.yml
 props:
-  # text color on body
-  # =============================================
-  text-color:
-    value: "{!gray-dark}"
-
-
-# $font-size-base:          14px !default;
-# $font-size-large:         ceil(($font-size-base * 1.25)) !default; // ~18px
-# $font-size-small:         ceil(($font-size-base * 0.85)) !default; // ~12px
-#
-# $font-size-h1:            floor(($font-size-base * 2.6)) !default; // ~36px
-# $font-size-h2:            floor(($font-size-base * 2.15)) !default; // ~30px
-# $font-size-h3:            ceil(($font-size-base * 1.7)) !default; // ~24px
-# $font-size-h4:            ceil(($font-size-base * 1.25)) !default; // ~18px
-# $font-size-h5:            $font-size-base !default;
-# $font-size-h6:            ceil(($font-size-base * 0.85)) !default; // ~12px
-#
-# //** Unit-less `line-height` for use in components like buttons.
-# $line-height-base:        1.428571429 !default; // 20/14
-# //** Computed "line-height" (`font-size` * `line-height`) for use with `margin`, `padding`, etc.
-# $line-height-computed:    floor(($font-size-base * $line-height-base)) !default; // ~20px
-#
-# //** By default, this inherits from the `<body>`.
-# $headings-font-family:    inherit !default;
-# $headings-font-weight:    500 !default;
-# $headings-line-height:    1.1 !default;
-# $headings-color:          inherit !default;
-# //** Blockquote font size
-# $blockquote-font-size:        ($font-size-base * 1.25) !default;
+  font-size-base:
+    value: "{!font-size-base}"
+  font-size-large:
+    value: "1.25em"
+  font-size-small:
+    value: "85em"
+  font-size-h1:
+    value: "2.6em"
+  font-size-h2:
+    value: "2.15em"
+  font-size-h3:
+    value: "1.7em"
+  font-size-h4:
+    value: "1.25em"
+  font-size-h5:
+    value: "{!font-size-base}"
+  font-size-h6:
+    value: ".85em"
+  blockquote-font-size:
+    value: "1.25em"
