--- a/assets/tokens/line-height/index.yml
+++ b/assets/tokens/line-height/index.yml
@@ -6,14 +6,14 @@ global:
   - '*height'
 props:
   line-height-base:
-    value: 1.45
+    value: 1.45em
     comment: Unitless line-heights for reusability
   line-height-computed:
-    value: 1.45
+    value: 1.45em
     comment: Unitless line-heights for reusability
   headings-line-height:
-    value: 1.1
+    value: 1.1em
   line-height-large:
-    value: 1.3333333
+    value: 1.3333333em
   line-height-small:
-    value: 1.5
+    value: 1.5em
