--- a/assets/tokens/package.json
+++ b/assets/tokens/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "@houlagins/ds-tokens",
-  "version": "0.0.4",
+  "name": "@biodiversity/ecosystem-tokens",
+  "version": "0.0.1",
   "description": "Design system tokens",
   "license": "MIT",
-  "author": "Randy Houlahan <randy.houlahan@cbd.int>",
+  "author": "Secretariat of the Convention on Biological Diversity <it@cbd.int>",
   "main": "index.module.js",
   "repository": "https://github.com/houlagins/design-system/tree/master/assets/tokens",
   "publishConfig": {
