--- a/package.json
+++ b/package.json
@@ -4,7 +4,10 @@
   "description": "Design System for the Secretariat of the Convention on Biological Diversity",
   "author": "Secretariat of the Convention on Biological Diversity <it@cbd.int>",
   "private": true,
-  "workspaces": ["assets/tokens/*","assets/style/*"],
+  "workspaces": [
+    "assets/tokens/*",
+    "assets/style/*"
+  ],
   "scripts": {
     "dev": "nuxt",
     "build": "nuxt build",
@@ -19,7 +22,7 @@
     "@nuxtjs/markdownit-loader": "^1.1.1",
     "@nuxtjs/pwa": "^2.0.5",
     "babel-polyfill": "^6.26.0",
-    "bootstrap-sass": "^3.3.7",
+
     "normalize.css": "^8.0.0",
     "nuxt": "npm:nuxt-edge",
     "vue-i18n": "^7.6.0",
@@ -32,6 +35,7 @@
   },
   "devDependencies": {
     "babel-eslint": "^8.2.1",
+    "bootstrap-sass": "^3.3.7",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^11.0.0",
     "eslint-friendly-formatter": "^3.0.0",
