--- a/components/patterns/calendar/package.json
+++ b/components/patterns/calendar/package.json
@@ -8,6 +8,12 @@
   "license": "MIT",
   "private": false,
   "dependencies": {
-    "vue-touch": "^1.1.0"
+    "@biodiversity/ecosystem-style": "^0.0.1",
+    "accept-language-parser": "^1.5.0",
+    "axios": "^0.18.0",
+    "luxon": "^1.2.0",
+    "velocity-animate": "^1.5.1",
+    "vue": "^2.5.16",
+    "vue-i18n": "^7.6.0"
   }
 }
