--- a/components/molecules/Carousel/vue/package.json
+++ b/components/molecules/Carousel/vue/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@biodiversity/eco-molecule-add-to-calendar",
-  "version": "0.0.4",
+  "name": "@biodiversity/eco-molecule-carousel",
+  "version": "0.0.0",
   "scripts": {
     "serve": "vue-cli-service serve",
     "lint": "vue-cli-service lint",
@@ -10,12 +10,11 @@
     "build:wca": "vue-cli-service build src/components/index.vue --target wc-async --name Add-To-Calendar --dest ../wca/",
     "release": "yarn publish --access=public"
   },
-  "main": "dist/AddToCalendar.umd.min.js",
+  "main": "dist/Carousel.umd.min.js",
   "dependencies": {
-    "@biodiversity/ecosystem-icons": "^0.0.6 ",
     "@biodiversity/ecosystem-style": "^0.0.9",
-    "vue": "^2.5.16",
-    "vue-i18n": "^7.6.0"
+    "normalize.css": "^8.0.0",
+    "vue": "^2.5.16"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.0-beta.14",
@@ -30,5 +29,5 @@
     "last 2 versions",
     "not ie <= 8"
   ],
-  "description": "Vue component to display 'subscribe to events' or 'event streams' into popular calendar clients."
+  "description": "Vue component to display a carousel."
 }
