update nuxt config

--- a/package.json
+++ b/package.json
@@ -50,5 +50,11 @@
     "sass-loader": "^7.0.1",
     "theo": "^7.0.1",
     "vue-i18n-extensions": "^0.1.0"
-  }
+  },
+  "config": {
+ "nuxt": {
+   "host": "localhost",
+   "port": "3000"
+ }
+}
 }
