--- a/package.json
+++ b/package.json
@@ -50,5 +50,10 @@
     "sass-loader": "^7.0.1",
     "theo": "^7.0.1",
     "vue-i18n-extensions": "^0.1.0"
-  }
+  },  "config": {
+      "nuxt": {
+        "host": "0.0.0.0",
+        "port": "3000"
+      }
+    }
 }
