--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "@nuxtjs/pwa": "^2.0.5",
     "babel-polyfill": "^6.26.0",
     "normalize.css": "^8.0.0",
-    "nuxt": "npm:nuxt-edge",
+    "nuxt": "^1.4.0",
     "vue-i18n": "^7.6.0",
     "vue-lazyload": "^1.1.4",
     "vue-particles": "^1.0.9"
@@ -50,10 +50,11 @@
     "sass-loader": "^7.0.1",
     "theo": "^7.0.1",
     "vue-i18n-extensions": "^0.1.0"
-  },  "config": {
-      "nuxt": {
-        "host": "0.0.0.0",
-        "port": "3333"
-      }
+  },
+  "config": {
+    "nuxt": {
+      "host": "0.0.0.0",
+      "port": "3333"
     }
+  }
 }
