--- a/assets/tokens/package.json
+++ b/assets/tokens/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@biodiversity/ecosystem-tokens",
-  "version": "0.0.6",
+  "name": "@scbd/ecosystem-tokens",
+  "version": "0.0.1",
   "description": "Design system tokens",
   "license": "MIT",
   "author": "Secretariat of the Convention on Biological Diversity <it@cbd.int>",
