--- a/package.json
+++ b/package.json
@@ -18,12 +18,15 @@
     "tokens": "./build-tokens.sh"
   },
   "dependencies": {
+    "@biodiversity/eco-molecule-calendar-vue": "0.0.1",
     "@nuxtjs/component-cache": "^0.1.3",
     "@nuxtjs/proxy": "^1.2.4",
     "@nuxtjs/pwa": "^2.0.5",
     "babel-polyfill": "^6.26.0",
     "normalize.css": "^8.0.0",
-    "nuxt": "^1.4.0",
+    "nuxt-edge": "^2.0.0-25494410.e993616",
+    "to-pascal-case": "^1.0.0",
+    "velocity-animate": "^1.5.1",
     "vue-i18n": "^7.6.0",
     "vue-lazyload": "^1.1.4",
     "vue-particles": "^1.0.9"
@@ -33,7 +36,11 @@
     "yarn": ">=1.6.0"
   },
   "devDependencies": {
+    "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-vue-app": "^2.0.0",
     "bootstrap-sass": "^3.3.7",
     "eslint": "^4.15.0",
     "eslint-config-standard": "^11.0.0",
