--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@nuxtjs/component-cache": "^0.1.3",
     "@nuxtjs/proxy": "^1.2.4",
     "@nuxtjs/pwa": "^2.0.5",
+    "@scbd/vue-authentication": "^0.0.4",
     "babel-polyfill": "^6.26.0",
     "normalize.css": "^8.0.0",
     "nuxt-edge": "^2.0.0-25494410.e993616",
