--- a/package.json
+++ b/package.json
@@ -22,6 +22,10 @@
     "@nuxtjs/component-cache": "^0.1.3",
     "@nuxtjs/proxy": "^1.2.4",
     "@nuxtjs/pwa": "^2.0.5",
+    "@scbd/eco-molecule-add-to-calendar": "^0.0.2",
+    "@scbd/ecosystem-icons": "^0.0.1",
+    "@scbd/ecosystem-style": "^0.0.1",
+    "@scbd/ecosystem-tokens": "^0.0.1",
     "@scbd/vue-authentication": "^0.0.4",
     "babel-polyfill": "^6.26.0",
     "normalize.css": "^8.0.0",
