--- a/assets/style/package.json
+++ b/assets/style/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scbd/ecosystem-style",
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Design system style",
   "license": "MIT",
   "author": "Secretariat of the Convention on Biological Diversity <it@cbd.int>",
@@ -20,7 +20,7 @@
     "readme.md"
   ],
   "dependencies": {
-    "@biodiversity/ecosystem-tokens": "^0.0.6"
+    "@scbd/ecosystem-tokens": "^0.0.1"
   },
   "devDependencies": {
     "node-sass": "^4.8.3"
