--- a/package.json
+++ b/package.json
@@ -10,26 +10,26 @@
   ],
   "scripts": {
     "dev": "nuxt",
-    "build": "nuxt build --universal",
-    "start": "nuxt start --spa",
+    "build": "nuxt build",
+    "start": "nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "tokens": "./build-tokens.sh"
   },
   "dependencies": {
-    "@biodiversity/eco-molecule-calendar-vue": "0.0.1",
     "@nuxtjs/component-cache": "^0.1.3",
     "@nuxtjs/proxy": "^1.2.4",
     "@nuxtjs/pwa": "^2.0.5",
-    "@scbd/eco-molecule-add-to-calendar": "^0.0.2",
+    "@scbd/eco-molecule-add-to-calendar": "^0.0.6",
+    "@scbd/eco-molecule-cal": "^0.0.2",
     "@scbd/ecosystem-icons": "^0.0.1",
     "@scbd/ecosystem-style": "^0.0.1",
     "@scbd/ecosystem-tokens": "^0.0.1",
     "@scbd/vue-authentication": "^0.0.7",
     "babel-polyfill": "^6.26.0",
     "normalize.css": "^8.0.0",
-    "nuxt-edge": "^2.0.0-25494410.e993616",
+    "nuxt": "^1.4.1",
     "to-pascal-case": "^1.0.0",
     "velocity-animate": "^1.5.1",
     "vue-i18n": "^7.6.0",
@@ -44,6 +44,7 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^8.2.1",
     "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-vue-app": "^2.0.0",
     "bootstrap-sass": "^3.3.7",
