--- a/components/molecules/conference-cal/package.json
+++ b/components/molecules/conference-cal/package.json
@@ -1,15 +1,16 @@
 {
   "name": "confrence-cal",
-  "version": "0.1.0",
+  "version": "0.0.0",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint"
+    "lint": "vue-cli-service lint",
+    "build": "yarn build:lib && yarn build:wc && yarn build:wca",
+    "build:lib": "vue-cli-service build src/components/ConferenceCal.vue --target lib --name ConferenceCal --dest dist/lib",
+    "build:wc": "vue-cli-service build src/components/ConferenceCal.vue --target wc --name conference-cal --dest dist/wc/",
+    "build:wca": "vue-cli-service build src/components/ConferenceCal.vue --target wc-async --name conference-cal --dest dist/wca/"
   },
   "dependencies": {
-    "@scbd/ecosystem-style": "^0.0.4",
-    "axios": "^0.18.0",
     "luxon": "^1.3.3",
     "vue": "^2.5.16"
   },
