--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,24 @@
-# dependencies
+.DS_Store
 node_modules
+/dist
+cypress.env.json
+/tests/e2e/videos/
+/tests/e2e/screenshots/
 
-# logs
-npm-debug.log
+# local env files
+.env.local
+.env.*.local
 
-# Nuxt build
-.nuxt
+# Log files
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
 
-# Nuxt generate
-dist
-
-yarn-error.log
+# Editor directories and files
+.idea
+.vscode
+*.suo
+*.ntvs*
+*.njsproj
+*.sln
+*.sw?
