--- a/packages/page-header/package.json
+++ b/packages/page-header/package.json
@@ -1,6 +1,12 @@
 {
   "name": "@ecosystem/page-header",
   "version": "0.1.0",
+  "main": "dist/PageHeader.common.js",
+  "unpkg": "dist/PageHeader.umd.min.js",
+  "browser": {
+    "./sfc": "src/data-providers/Drupal.vue"
+  },
+  "files": [ "dist/*", "src/*" ],
   "scripts": {
     "serve": "vue-cli-service serve --mode stg",
     "build": "NODE_ENV=production sh scripts/build.sh",
@@ -9,7 +15,8 @@
     "deploy:dev": "vue-cli-service s3-deploy --mode dev",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
     "test:e2e:headless": "vue-cli-service test:e2e --headless",
-    "test:e2e:headless:login": "vue-cli-service test:e2e --headless -s tests/e2e/specs/login.js"
+    "test:e2e:headless:login": "vue-cli-service test:e2e --headless -s tests/e2e/specs/login.js",
+    "release": "yarn publish --access=public"
   },
   "dependencies": {
     "change-case": "^3.1.0",
