--- a/package.json
+++ b/package.json
@@ -1,32 +1,46 @@
 {
-  "name": "ecosystem",
-  "version": "0.1.0",
-  "private": true,
-  "workspaces": [
-    "packages/*"
-  ],
-  "@ecosystem": {
-    "symlinkWorkspaces": true
-  },
+  "name"      : "ecosystem",
+  "version"   : "0.1.0",
+  "private"   : true,
+  "workspaces": [ "packages/*" ],
+  "@ecosystem": { "symlinkWorkspaces": true },
+  "description": "Component library front-end",
+  "author": "Secretariat of the Convention on Biological Diversity <it@cbd.int>",
   "scripts": {
-    "linky": "lerna link",
-    "bs": "yarn && lerna bootstrap",
-    "clean": "lerna clean && rm -rf node_modules && rm yarn.lock"
+    "build"            : "lerna run build",
+    "deploy"           : "lerna deploy",
+    "test:e2e:headless": "lerna run test:e2e:headless",
+    "lint"             : "lerna run lint",
+    "prePublish"       : "lerna run lint && lerna run build && lerna run test:e2e:headless",
+    "prepatch": "lerna version prepatch",
+    "rebuild"          : "lerna clean -y && rm -rf node_modules && rm yarn.lock && yarn && lerna bootstrap && lerna link",
+    "ui"               : "vue ui"
   },
   "dependencies": {
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "vue"    : "^2.6.10"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "^4.0.0",
+    "@rollup/plugin-alias"       : "^2.2.0",
+    "@rollup/plugin-buble"       : "^0.20.0",
+    "@rollup/plugin-replace"     : "^2.2.1",
+    "@vue/cli-plugin-babel"      : "^4.0.0",
     "@vue/cli-plugin-e2e-cypress": "^4.0.5",
-    "@vue/cli-plugin-eslint": "^4.0.0",
-    "@vue/cli-service": "^4.0.0",
-    "babel-eslint": "^10.0.3",
-    "css-loader": "^3.2.0",
-    "eslint": "^5.16.0",
-    "eslint-plugin-vue": "^5.0.0",
-    "lerna": "^3.18.4",
-    "vue-template-compiler": "^2.6.10"
+    "@vue/cli-plugin-eslint"     : "^4.0.0",
+    "@vue/cli-service"           : "^4.0.0",
+    "babel-eslint"               : "^10.0.3",
+    "cross-env"                  : "^6.0.3",
+    "css-loader"                 : "^3.2.0",
+    "eslint"                     : "^5.16.0",
+    "eslint-plugin-vue"          : "^5.0.0",
+    "lerna"                      : "^3.18.4",
+    "minimist"                   : "^1.2.0",
+    "rollup"                     : "^1.27.8",
+    "rollup-plugin-babel"        : "^4.3.3",
+    "rollup-plugin-commonjs"     : "^10.1.0",
+    "rollup-plugin-terser"       : "^5.1.2",
+    "rollup-plugin-vue"          : "^5.1.4",
+    "vue-sfc-rollup"             : "^2.1.0",
+    "vue-template-compiler"      : "^2.6.10"
   }
 }
