--- a/packages/page-header-fixed/package.json
+++ b/packages/page-header-fixed/package.json
@@ -1,15 +1,22 @@
 {
   "name": "@ecosystem/page-header-fixed",
   "version": "0.1.0",
+  "unpkg": "dist/PageHeaderFixed.umd.min.js",
+  "main": "dist/PageHeaderFixed.common.js",
+  "browser": {
+    "./sfc": "src/data-providers/Drupal.vue"
+  },
+  "files": [ "dist/*", "src/*" ],
   "scripts": {
-    "serve": "vue-cli-service serve --mode stg",
+    "serve": "vue-cli-service serve --open --mode stg tests/dev/main.js",
     "build": "NODE_ENV=production sh scripts/build.sh",
-    "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint --fix -c ../../.eslintrc.js",
+    "lint": "vue-cli-service lint --fix -c .eslintrc.js",
     "deploy:dev": "vue-cli-service s3-deploy --mode dev",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
+    "test:e2e": "vue-cli-service test:e2e",   
     "test:e2e:headless": "vue-cli-service test:e2e --headless",
-    "test:e2e:headless:login": "vue-cli-service test:e2e --headless -s tests/e2e/specs/login.js"
+    "test:e2e:headless:login": "vue-cli-service test:e2e --headless -s tests/e2e/specs/login.js",
+    "release": "yarn publish --access=public --tag beta"
   },
   "dependencies": {
     "change-case": "^3.1.0",
@@ -31,7 +38,17 @@
     "purgecss-webpack-plugin": "^1.6.0",
     "vue-cli-plugin-i18n": "^0.6.0",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "@rollup/plugin-alias": "^2.2.0",
+    "@rollup/plugin-buble": "^0.20.0",
+    "@rollup/plugin-replace": "^2.2.1",
+    "cross-env": "^6.0.3",
+    "minimist": "^1.2.0",
+    "rollup": "^1.26.3",
+    "rollup-plugin-commonjs": "^10.1.0",
+    "rollup-plugin-terser": "^5.1.2",
+    "rollup-plugin-vue": "5.1.1",
+    "vue": "^2.6.10"
   },
   "@ecosystem": {
     "symlinkWorkspaces": true
