--- a/packages/self-embedding-component/package.json
+++ b/packages/self-embedding-component/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@scbd/self-embedding-component",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "private": false,
   "license": "MIT",
   "main": "dist/SelfEmbeddingComponent.common.js",
@@ -24,5 +24,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "@scbd/component-service": "^0.1.0"
   }
 }
