--- a/packages/map-nav/package.json
+++ b/packages/map-nav/package.json
@@ -16,14 +16,16 @@
     "serve": "vue-cli-service serve",
     "build": "NODE_ENV=production sh scripts/build.sh",
     "test:e2e": "vue-cli-service test:e2e",
-    "lint": "vue-cli-service lint --fix",
+    "lint": "vue-cli-service lint --fix -c ../../.eslintrc.js",
     "release": "yarn publish --access=public --tag beta"
   },
   "dependencies": {
     "@amcharts/amcharts4": "^4.7.12",
     "@amcharts/amcharts4-geodata": "^4.1.9",
-    "@scbd/component-options": "^0.1.0",
-    "@scbd/self-embedding-component": "^0.0.1",
+    "@scbd/default-options": "0.0.7",
+    "@scbd/self-embedding-component": "0.0.5",
+    "bootstrap": "^4.4.1",
+    "change-case": "^4.1.0",
     "core-js": "^3.4.3",
     "vue": "^2.6.10"
   },
