--- a/packages/page-footer/package.json
+++ b/packages/page-footer/package.json
@@ -24,7 +24,9 @@
   },
   "dependencies": {
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "@scbd/default-options": "0.0.7",
+    "@scbd/self-embedding-component": "0.0.6"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
