--- a/packages/page-header/package.json
+++ b/packages/page-header/package.json
@@ -27,7 +27,9 @@
     "change-case": "^3.1.0",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
-    "vue-i18n": "^8.0.0"
+    "vue-i18n": "^8.0.0",
+    "@scbd/default-options": "0.0.7",
+    "@scbd/self-embedding-component": "0.0.6"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
