--- a/packages/map-nav/package.json
+++ b/packages/map-nav/package.json
@@ -13,7 +13,7 @@
     "src/*"
   ],
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --open",
     "build": "NODE_ENV=production sh scripts/build.sh",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint --fix -c ../../.eslintrc.js",
@@ -23,7 +23,7 @@
     "@amcharts/amcharts4": "^4.7.12",
     "@amcharts/amcharts4-geodata": "^4.1.9",
     "@scbd/default-options": "0.0.7",
-    "@scbd/self-embedding-component": "0.0.6",
+    "@scbd/self-embedding-component": "0.0.7",
     "bootstrap": "^4.4.1",
     "change-case": "^4.1.0",
     "core-js": "^3.4.3",
