--- a/lerna.json
+++ b/lerna.json
@@ -1,10 +1,13 @@
 {
   "npmClient": "yarn",
   "useWorkspaces": true,
-  "version": "0.1.0",
+  "version": "independent",
   "command": {
     "run": {
       "npmClient": "yarn"
     }
-  }
+  },
+  "packages": [
+    "packages/*"
+  ]
 }
