--- a/packages/default-options/package.json
+++ b/packages/default-options/package.json
@@ -24,5 +24,8 @@
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-template-compiler": "^2.6.10"
+  },
+  "dependencies": {
+    "@scbd/self-embedding-component": "^0.0.7"
   }
 }
