--- a/packages/sso-vue-plugin-scbd/package.json
+++ b/packages/sso-vue-plugin-scbd/package.json
@@ -23,6 +23,8 @@
     "release": "yarn publish --access=public --tag beta"
   },
   "dependencies": {
+    "@scbd/default-options": "^0.0.7",
+    "@scbd/self-embedding-component": "^0.0.7",
     "axios": "^0.19.0",
     "core-js": "^3.3.2",
     "vue": "^2.6.10"
