--- a/packages/default-options/package.json
+++ b/packages/default-options/package.json
@@ -26,6 +26,7 @@
     "vue-template-compiler": "^2.6.10"
   },
   "dependencies": {
-    "@scbd/self-embedding-component": "^0.0.7"
+    "@scbd/self-embedding-component": "^0.0.7",
+    "webfont": "^9.0.0"
   }
 }
