--- a/packages/page-header/package.json
+++ b/packages/page-header/package.json
@@ -29,7 +29,8 @@
     "change-case": "^3.1.0",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
-    "vue-i18n": "^8.0.0"
+    "vue-i18n": "^8.0.0",
+    "webfont": "^9.0.0"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
