--- a/packages/sso-vue-plugin-scbd/package.json
+++ b/packages/sso-vue-plugin-scbd/package.json
@@ -1,8 +1,8 @@
 {
   "name": "@scbd/sso-vue-plugin-scbd",
-  "version": "0.0.1",
+  "version": "0.0.10",
   "license": "MIT",
-  "main": "dist/sso-vue-plugin-scbd.common.js",
+  "main": "dist/sso-vue-plugin-scbd.umd.min.js0.0.3",
   "unpkg": "dist/sso-vue-plugin-scbd.umd.min.js",
   "private": false,
   "browser": {
@@ -13,21 +13,22 @@
     "src/*"
   ],
   "scripts": {
-    "serve": "vue-cli-service --mode stg serve --open ",
+    "serve": "vue-cli-service --mode production serve --open ",
     "build": "rm -rf dist/* && vue-cli-service build --mode production  --target lib src/plugin.js",
     "deploy:dev": "vue-cli-service --mode dev s3-deploy ",
     "deploy": "vue-cli-service s3-deploy --mode production",
     "test:e2e": "vue-cli-service --mode stg test:e2e",
-    "test:e2e:headless": "vue-cli-service --mode stg test:e2e --headless --url http://localhost:8883y",
+    "test:e2e:headless": "vue-cli-service --mode stg test:e2e --headless --url http://localhost:8883",
     "lint": "vue-cli-service lint",
-    "release": "yarn publish --access=public --tag beta"
+    "release": "yarn publish --access=public --tag latest",
+    "yarn-upgrade-deps": "yarn upgrade-interactive --latest",
+    "yarn-outdated": "yarn outdated"
   },
   "dependencies": {
     "@scbd/default-options": "^0.0.7",
-    "@scbd/self-embedding-component": "^0.0.7",
-    "axios": "^0.19.0",
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "ky": "^0.16.1",
+    "ky-universal": "^0.3.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -36,10 +37,12 @@
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.3.1",
+    "core-js": "^3.3.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
-    "vue-template-compiler": "^2.6.10"
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.2"
   },
   "gitHead": "534f983ca739cdaaf1a29e473d6ba99c90a585d0"
 }
