--- a/package.json
+++ b/package.json
@@ -1,19 +1,19 @@
 {
   "name"      : "ecosystem",
-  "version"   : "0.1.0",
   "private"   : true,
+  "license": "MIT",
   "workspaces": [ "packages/*" ],
-  "@ecosystem": { "symlinkWorkspaces": true },
   "description": "Component library front-end",
   "author": "Secretariat of the Convention on Biological Diversity <it@cbd.int>",
   "scripts": {
     "build"            : "lerna run build",
-    "deploy"           : "lerna deploy",
+    "publish"           : "lerna publish from-package",
     "test:e2e:headless": "lerna run test:e2e:headless",
     "lint"             : "lerna run lint",
     "prePublish"       : "lerna run lint && lerna run build && lerna run test:e2e:headless",
-    "prepatch": "lerna version prepatch",
+    "prepatch"         : "lerna version prepatch",
     "rebuild"          : "lerna clean -y && rm -rf node_modules && rm yarn.lock && yarn && lerna bootstrap && lerna link",
+    "boot"             : "lerna bootstrap && lerna link",
     "ui"               : "vue ui"
   },
   "dependencies": {
