--- a/packages/sso-vue-plugin-scbd/package.json
+++ b/packages/sso-vue-plugin-scbd/package.json
@@ -1,27 +1,34 @@
 {
-  "name": "@ecosystem/sso-vue-plugin-scbd",
-  "version": "0.1.0",
-  "private": true,
-  "main": "dist/sso-vue-plugin-scbd.common.js",
+  "name": "@scbd/sso-vue-plugin-scbd",
+  "version": "0.0.10",
+  "license": "MIT",
+  "main": "dist/sso-vue-plugin-scbd.umd.min.js0.0.3",
   "unpkg": "dist/sso-vue-plugin-scbd.umd.min.js",
+  "private": false,
   "browser": {
     "./sfc": "src/plugin.js"
   },
-  "files": [ "dist/*", "src/*" ],
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
   "scripts": {
-    "serve": "vue-cli-service --mode stg serve --open ",
+    "serve": "vue-cli-service --mode production serve --open ",
     "build": "rm -rf dist/* && vue-cli-service build --mode production  --target lib src/plugin.js",
     "deploy:dev": "vue-cli-service --mode dev s3-deploy ",
     "deploy": "vue-cli-service s3-deploy --mode production",
     "test:e2e": "vue-cli-service --mode stg test:e2e",
-    "test:e2e:headless": "vue-cli-service --mode stg test:e2e --headless",
+    "test:e2e:headless": "vue-cli-service --mode stg test:e2e --headless --url http://localhost:8883",
     "lint": "vue-cli-service lint",
-    "release": "yarn publish --access=public"
+    "release": "yarn publish --access=public --tag latest",
+    "yarn-upgrade-deps": "yarn upgrade-interactive --latest",
+    "yarn-outdated": "yarn outdated"
   },
   "dependencies": {
-    "axios": "^0.19.0",
-    "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "@scbd/default-options": "^0.0.7",
+    "ky": "^0.16.1",
+    "ky-universal": "^0.3.0",
+    "vue": "^2.6.11"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -30,9 +37,12 @@
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
     "bootstrap": "^4.3.1",
+    "core-js": "^3.3.2",
     "eslint": "^5.16.0",
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
-    "vue-template-compiler": "^2.6.10"
-  }
+    "vue-template-compiler": "^2.6.10",
+    "vuex": "^3.1.2"
+  },
+  "gitHead": "534f983ca739cdaaf1a29e473d6ba99c90a585d0"
 }
