--- a/packages/page-header-fixed/package.json
+++ b/packages/page-header-fixed/package.json
@@ -1,57 +1,65 @@
 {
-  "name": "@ecosystem/page-header-fixed",
-  "version": "0.1.0",
+  "name": "@scbd/page-header-fixed",
+  "private": false,
+  "license": "MIT",
+  "version": "0.0.55",
   "unpkg": "dist/PageHeaderFixed.umd.min.js",
-  "main": "dist/PageHeaderFixed.common.js",
+  "main": "dist/PageHeaderFixed.umd.min.js",
   "browser": {
     "./sfc": "src/data-providers/Drupal.vue"
   },
-  "files": [ "dist/*", "src/*" ],
+  "files": [
+    "dist/*",
+    "src/*"
+  ],
   "scripts": {
     "serve": "vue-cli-service serve --open --mode stg tests/dev/main.js",
     "build": "NODE_ENV=production sh scripts/build.sh",
     "lint": "vue-cli-service lint --fix -c .eslintrc.js",
     "deploy:dev": "vue-cli-service s3-deploy --mode dev",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
-    "test:e2e": "vue-cli-service test:e2e",   
+    "test:e2e": "vue-cli-service test:e2e",
     "test:e2e:headless": "vue-cli-service test:e2e --headless",
     "test:e2e:headless:login": "vue-cli-service test:e2e --headless -s tests/e2e/specs/login.js",
-    "release": "yarn publish --access=public --tag beta"
+    "release": "yarn publish --access=public --tag latest"
   },
   "dependencies": {
+    "@scbd/default-options": "0.0.7",
     "change-case": "^3.1.0",
     "core-js": "^3.3.2",
+    "tiny-debounce": "^0.1.1",
     "vue": "^2.6.10",
-    "vue-i18n": "^8.0.0"
+    "vue-i18n": "^8.0.0",
+    "webfont": "^9.0.0"
   },
   "devDependencies": {
     "@kazupon/vue-i18n-loader": "^0.3.0",
+    "@rollup/plugin-alias": "^2.2.0",
+    "@rollup/plugin-buble": "^0.20.0",
+    "@rollup/plugin-replace": "^2.2.1",
     "@vue/cli-plugin-babel": "^4.0.0",
     "@vue/cli-plugin-e2e-cypress": "^4.0.0",
     "@vue/cli-plugin-eslint": "^4.0.0",
     "@vue/cli-service": "^4.0.0",
     "babel-eslint": "^10.0.3",
+    "cross-env": "^6.0.3",
     "cypress-image-snapshot": "^3.1.1",
     "eslint": "^6.7.0",
     "eslint-plugin-vue": "^6.0.1",
     "glob-all": "^3.1.0",
-    "purgecss-webpack-plugin": "^1.6.0",
-    "vue-cli-plugin-i18n": "^0.6.0",
-    "vue-cli-plugin-s3-deploy": "^3.0.0",
-    "vue-template-compiler": "^2.6.10",
-    "@rollup/plugin-alias": "^2.2.0",
-    "@rollup/plugin-buble": "^0.20.0",
-    "@rollup/plugin-replace": "^2.2.1",
-    "cross-env": "^6.0.3",
     "minimist": "^1.2.0",
+    "purgecss-webpack-plugin": "^1.6.0",
     "rollup": "^1.26.3",
     "rollup-plugin-commonjs": "^10.1.0",
     "rollup-plugin-terser": "^5.1.2",
     "rollup-plugin-vue": "5.1.1",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "vue-cli-plugin-i18n": "^0.6.0",
+    "vue-cli-plugin-s3-deploy": "^3.0.0",
+    "vue-template-compiler": "^2.6.10"
   },
   "@ecosystem": {
     "symlinkWorkspaces": true
   },
-  "license": "MIT"
+  "gitHead": "534f983ca739cdaaf1a29e473d6ba99c90a585d0"
 }
