--- a/packages/page-footer/package.json
+++ b/packages/page-footer/package.json
@@ -1,7 +1,9 @@
 {
-  "name": "@ecosystem/page-footer",
-  "version": "0.1.0",
-  "main": "dist/PageFooter.common.js",
+  "name": "@scbd/page-footer",
+  "version": "0.0.52",
+  "private": false,
+  "license": "MIT",
+  "main": "dist/PageFooter.umd.min.js",
   "unpkg": "dist/PageFooter.umd.min.js",
   "browser": {
     "./sfc": "src/data-providers/Drupal.vue"
@@ -18,12 +20,14 @@
     "test:e2e:headless": "vue-cli-service test:e2e --headless",
     "lint": "vue-cli-service lint --fix -c ../../.eslintrc.js",
     "i18n:report": "vue-cli-service i18n:report --src './src/**/*.?(js|vue)' --locales './src/locales/**/*.json'",
-    "release": "yarn publish --access=public"
-
+    "release": "yarn publish --access=public --tag latest"
   },
   "dependencies": {
+    "@scbd/default-options": "0.0.7",
+    "@scbd/self-embedding-component": "^0.0.7",
     "core-js": "^3.3.2",
-    "vue": "^2.6.10"
+    "vue": "^2.6.10",
+    "webfont": "^9.0.0"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^4.0.0",
@@ -35,5 +39,6 @@
     "eslint-plugin-vue": "^5.0.0",
     "vue-cli-plugin-s3-deploy": "^3.0.0",
     "vue-template-compiler": "^2.6.10"
-  }
+  },
+  "gitHead": "534f983ca739cdaaf1a29e473d6ba99c90a585d0"
 }
